finish header section

--- a/index.html
+++ b/index.html
@@ -11,14 +11,42 @@
 </head>
 <body>
     <header>
+        <!-- header section start -->
+        <nav id="nav-bar">
+            <div class="container">
+                <div class="logo">
+                    <a href="/"><img src="./images/logo.svg" alt="logo"></a>
+                </div>
 
+               <ul class="menu">
+                   <li><a href="#">Home</a></li>
+                   <li><a href="#">About</a></li>
+                   <li><a href="#">Contact</a></li>
+                   <li><a href="#">Blog</a></li>
+                   <li><a href="#">Careers</a></li>
+               </ul>
+
+
+               <a class="request-btn" href="#">request invite</a>
+
+               <div class="menu-btn">
+                   <img src="./images/icon-hamburger.svg" alt="icon-hamburger">
+               </div>
+            </div>
+        </nav>
     </header>
 
     <main>
+        <!--home section start -->
+        <section>
+
+
+        </section>
 
     </main>
 
     <footer>
+        <!-- footer section start -->
 
     </footer>
     
