finish home section

--- a/index.html
+++ b/index.html
@@ -38,9 +38,19 @@
 
     <main>
         <!--home section start -->
-        <section>
+        <section id="home">
+            <div class="home-section">
+                <div class="left-col">
+                    <h1>Next generation digital banking</h1>
+                    <p>Take your financial life online. Your Easybank account will be a one-stop-shop for spending, saving, budgeting, investing, and much more.</p>
+                    <a class="request-btn" href="#">request invite</a>
 
-
+                </div>
+    
+                <div class="right-col">
+                    <img src="./images/image-mockups.png" alt="">
+                </div>
+            </div>
         </section>
 
     </main>
