--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                 </div>
 
                <ul class="menu">
-                   <li><a href="#">Home</a></li>
-                   <li><a href="#">About</a></li>
-                   <li><a href="#">Contact</a></li>
-                   <li><a href="#">Blog</a></li>
-                   <li><a href="#">Careers</a></li>
+                   <li><a href="#home">Home</a></li>
+                   <li><a href="#about">About</a></li>
+                   <li><a href="#contact">Contact</a></li>
+                   <li><a href="#blog">Blog</a></li>
+                   <li><a href="#careers">Careers</a></li>
                </ul>
 
 
@@ -49,6 +49,47 @@
     
                 <div class="right-col">
                     <img src="./images/image-mockups.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <!-- about section start -->
+        <section id="about">
+            <div class="about-section">
+                <div class="intro">
+                    <h2>Why choose Easybank?</h2>
+                    <p>We leverage Open Banking to turn your bank account into your financial hub. Control your finances like never before.</p>
+                </div
+                >
+                <div class="cards">
+                    <div class="card">
+                        <img src="./images/icon-online.svg" alt="">
+
+                        <h3>Online Banking</h3>
+
+                        <p>Our modern web and mobile applications allow you to keep track of your finances wherever you are in the world.</p>
+                    </div>
+                    <div class="card">
+                        <img src="./images/icon-budgeting.svg" alt="">
+
+                        <h3>Simple Budgeting</h3>
+
+                        <p>See exactly where your money goes each month. Receive notifications when you’re close to hitting your limits.</p>
+                    </div>
+                    <div class="card">
+                        <img src="./images/icon-onboarding.svg" alt="">
+
+                        <h3>Fast Onboarding</h3>
+
+                        <p>We don’t do branches. Open your account in minutes online and start taking control of your finances right away.</p>
+                    </div>
+                    <div class="card">
+                        <img src="./images/icon-api.svg" alt="">
+
+                        <h3>Open API</h3>
+
+                        <p>Manage your savings, investments, pension, and much more from one account. Tracking your money has never been easier.</p>
+                    </div>
                 </div>
             </div>
         </section>
