--- a/index.html
+++ b/index.html
@@ -135,14 +135,42 @@
                 </div>
             </div>
         </section>
-
-        
-
     </main>
 
     <footer>
         <!-- footer section start -->
+        <div class="footer-section">
+            <div class="left-col">
+                <div class="one">
+                    <div class="logo">
+                        <img class="footer-logo" src="./images/logo.svg" alt="logo">
+                    </div>
+                    <div class="contact" id="contact">
+                        <a href=""><img src="./images/icon-facebook.svg" alt=""></a>
+                        <a href=""><img src="./images/icon-youtube.svg" alt=""></a>
+                        <a href=""><img src="./images/icon-twitter.svg" alt=""></a>
+                        <a href=""><img src="./images/icon-pinterest.svg" alt=""></a>
+                        <a href=""><img src="./images/icon-instagram.svg" alt=""></a>
+                    </div>
+                </div>
+                <div class="two">
+                    <a href="#about">about us</a>
+                    <a href="#">contact</a>
+                    <a href="#">blog</a>
+                </div>
+                <div class="three">
+                    <a href="#">careers</a>
+                    <a href="">support</a>
+                    <a href="">privacy policy</a>
+                </div>
+            </div>
 
+            <div class="right-col">
+                <a class="request-btn" href="#">request invite</a>
+
+                <span>&copy; Easybank. All Rights Reserved</span>
+            </div>
+        </div>
     </footer>
     
     <script src="main.js"></script>
