finish mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/responsive-style.css">
+    <script src="https://kit.fontawesome.com/9a050271ac.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -18,19 +19,23 @@
                     <a href="/"><img src="./images/logo.svg" alt="logo"></a>
                 </div>
 
-               <ul class="menu">
-                   <li><a href="#home">Home</a></li>
-                   <li><a href="#about">About</a></li>
-                   <li><a href="#contact">Contact</a></li>
-                   <li><a href="#blog">Blog</a></li>
-                   <li><a href="#careers">Careers</a></li>
-               </ul>
+                <div class="menu-container">
+                    <div class="menu-bg"></div>
+                    <ul class="menu">
+                        <li><a class="nav-link" href="#home">Home</a></li>
+                        <li><a class="nav-link" href="#about">About</a></li>
+                        <li><a class="nav-link" href="#contact">Contact</a></li>
+                        <li><a class="nav-link" href="#blog">Blog</a></li>
+                        <li><a class="nav-link" href="#careers">Careers</a></li>
+                    </ul>
+                </div>
+
 
 
                <a class="request-btn" href="#">request invite</a>
 
                <div class="menu-btn">
-                   <img src="./images/icon-hamburger.svg" alt="icon-hamburger">
+                <i class="fas fa-bars"></i>
                </div>
             </div>
         </nav>
